--- a/FightGearProducts/Pages/Admin/AdminLayout.razor
+++ b/FightGearProducts/Pages/Admin/AdminLayout.razor
@@ -1,6 +1,15 @@
 ﻿@inherits LayoutComponentBase
 <div class="bg-info text-white p-2">
-    <span class="navbar-brand ml-2">FIGHT GEAR STORE Administration</span>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <span class="navbar-brand ml-2">FIGHT GEAR STORE Administration</span>
+            </div>
+            <div class="col-2 text-right">
+                <a href="/account/logout" class="btn btn-sm btn-primary">Log Out</a>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="container-fluid">
     <div class="row p-2">
